css/style.css
/* ... */
/* Base */

html, body {
    height: 100%;
}

body {
    font: 300 18px/1 "Roboto", "Helvetica Neue Light", Helvetica, Arial, sans-serif;
    color: #666;
    -webkit-font-smoothing: antialiased;
    text-rendering: optimizeLegibility;
}

.profile #wrapper {
    padding: 60px 40px 0px;
    max-width: 800px;      /*-- change site width --*/
    margin: 0 auto;
}

.profile #header {
    margin-top: 20px;
    margin-bottom: 60px;
    text-align: center;
    position: relative;
}

/*
.profile #avatar {
    display: inline-block;
    width: 80px;
    height: 80px;
    border-radius: 50%;
    margin-bottom: 20px;
}*/

.profile h1 {     /* Cecilia Lee */
    font-weight: 300;
    font-size: 24px;
    color: #222;
}

.profile h2  {    /* Description */
    font-size: 20px;
    font-weight: 300;
    padding-top: 10px;
    letter-spacing: -1px;
    color: #aaa;
    font-family: 'Roboto', 'Helvetica Neue Light', Helvetica, Arial, sans-serif;
    font-style: normal;
}

nav.main-nav {
    //letter-spacing: 1px;
    padding: 20px 20px 0;
    background: #fff; 
    background: rgba(255, 255, 255, .90);
    margin: 0 auto;
    margin-bottom: 10px;
    text-align: right;
    font-size: 16px;
    letter-spacing: 1px;
    z-index: 100;
}

nav.main-nav a {
    top: 8px;
    right: 6px;
    padding: 8px 12px;
    color: #ccc;
    border-radius: 3px;
}

nav.main-nav a.cta {
    background: #5badf0;
    color: #fff;
    margin-left: 12px;
}
@media (max-width: 700px) {
  nav.main-nav {
      padding: 20px 10px 0 0;
      background: #fff;
      background: rgba(255, 255, 255, .90);
      margin: 0 auto;
      text-align: right;
      z-index: 100;
  }
  nav.main-nav a {
      top: 8px;
      right: 6px;
      padding: 8px 8px;
      color: #AAAAAA;
      font-size: 16 px;
      line-height: 1.35;
      border-radius: 3px;
  }
}
@media (max-width: 324px) {
    nav.main-nav a.cta {
      display: none;
    }
}

#wrapper {
    max-width: 800px;      /*-- change site width --*/
    margin: 0 auto;
    padding: 60px 20px 20px 20px;    /*-- change site width --*/
}

#wrapper.home {
    padding-top: 0px;
}

.home #avatar {
    float: right;
    width: 40px;
    height: 40px;
    border-radius: 50%;
}


/* Typography */


/*Accent color*/

a, #title {
    text-decoration: none;
    color: #BAAF9E;
}

p a {
    color: #BAAF9E;
    font-weight: 400;
}


/*Transitions*/

a, #post-nav a, #post-list a {
    -webkit-transition: all 0.15s ease;
    -moz-transition: all 0.15s ease;
    -ms-transition: all 0.15s ease;
    -o-transition: all 0.15s ease;
    transition: all 0.15s ease;
}

ul {
    margin: 0;
    padding: 0;
}

li {
    list-style-position: inside;
}

ul>li {
    list-style-type: None;
}

#post-body ul>li:before {
    content: '– ';
    padding-right: 10px;
}

/* Line Height */

#post-body, p {
    line-height: 1.5;
    padding-bottom: 15px;
}
#post-body p > a {
  word-break: break-word;
  white-space: pre-wrap;
}

b, strong {
    font-weight: 500;
    color: #444;
}

em, i {
    font-style: italic;
}

#title {
    display: inline-block;
    line-height: 100%;
    font-weight: 500;
    font-size: 19px;
    margin: 0;
    padding-bottom: 20px;
}

.home h1 {
    font-size: 30px;
    letter-spacing: -1px;
    color: #222;
    font-weight: bold;
}

.home h2 {
    color: #bbb;
}

.home p {    /* About */
    font-weight: 300;
    font-size: 20px;
    text-align: center;
    color: #aaa;
}

.post header {
    text-align: center;
}

h3, h4, h5, h6 {
    margin-top: 20px;
    margin-bottom: 20px;
}

.post h1 {
    color: #222;
    font: 300 34px/1.5 "Roboto", "Helvetica Neue Light", Helvetica, Arial, sans-serif;
    letter-spacing: -1px;
    margin-top: 20px;
    margin-bottom: 20px;
}

.post h2 {
    margin-bottom: 15px;
    font-size: 26px;
    font: 300 28px/1.5 "Roboto", "Helvetica Neue Light", Helvetica, Arial, sans-serif;
    color: #111;
    margin-top: 20px;
    margin-bottom: 20px;
}

.post h2.headline {    /* post date time */
    margin: 5px 0 0 0;
    color: #aaa;
    font-size: 16px;
    letter-spacing: 1px;
    display: inline-block;
}

.post h2.headline .tags {
    margin: -5px 0 40px 0;
    color: #aaa;
    font-size: 16px;
    text-transform: lowercase;
    letter-spacing: 1px;
    margin-top: 0px;
    display: block;
}

#post-list h2 {
    font: 300 18px/1.5em "Roboto", "Helvetica Neue Light", Helvetica, Arial, sans-serif;
    color: #aaa;
    max-width: 800px;      /*-- change site width --*/
    margin-top: 5px;
}

h3 {
    font-size: 25px;
    font-weight: 400;
    color: #444;
}

h4 {
    font-size: 25px;
    font-weight: 300;
    color: #222;
}

h5 {
    font-size: 22px;
    font-weight: 400;
    color: #333;
}

h6 {
    font-size: 21px;
    font-weight: 500;
    color: #555;
    margin-bottom: 6px;
} 

p.small {
    color: #ccc;
    font-size: 14px;
    line-height: 1.5;
    display: block;
    text-align: center;
    margin-top: 15px;
}

blockquote {
    padding-top: 10px;
    padding-left: 25px;
    border-left: 3px solid #eee;
}

hr {
    display: block;
    border: none;
    height: 1px;
    margin: 40px auto;
    background: #eee;
}

table {
    width: 100%;
    margin-top: 5px;
    margin-bottom: 25px;
    border-collapse: collapse;
    line-height: 1em;
}

th, td {
    text-align: left;
    padding-right: 20px;
    vertical-align: top;
}

table td, td {
    border-spacing: none;
    border-style: solid;
    padding: 10px 15px;
    border-width: 1px 0 0 0;
}

tr>td {
    border-top: 1px solid #eaeaea;
}

tr:nth-child(odd)>td {
    background: #fcfcfc;
}

thead th, th {
    text-align: left;
    padding: 10px 15px;
    height: 20px;
    font-weight: 400;
    color: #444;
    border-bottom: 1px solid #dadadc;
    cursor: default;
    white-space: nowrap;
}

img {
    width: 100%;
    max-width: 100%;
    border-radius: 3px;
}


/*=========================================
Post List
=========================================== */

#post-list, #archive-list {
}
/* ... */

